# LynAI

./: .gitignore  AGENTS.md  README.md  THIRD_PARTY_NOTICES.md  pubspec.yaml
.github/workflows/: build.yml
android/: .gitignore  build.gradle.kts  gradle.properties  key.properties
android/app/: build.gradle.kts  lynai-upload-key.jks
assets/mathlive/: editor.html
assets/mermaid/: renderer.html
changelogs/: v2.3.0.md  v2.3.1.md  v2.3.2.md  v2.3.3.md  v3.0.0.md  v3.0.1.md  v4.0.0.md
doc/: README.md  architecture.md  models.md  pages.md  protocol-v1.md  providers.md  services.md
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app_version.dart  main.dart
lib/models/: account.dart  agent_plan.dart  agent_trace.dart  agent_working_memory.dart  anniversary.dart  app_settings.dart  backup_models.dart  calendar_event.dart  calendar_occurrence.dart  calendar_platform_projection.dart  changelog_entry.dart  chat_role.dart  community.dart  conversation.dart  device_control.dart  device_identity.dart  item_reminder.dart  lan_pairing_payload.dart  lan_peer.dart  local_date.dart  local_time.dart  merge_models.dart  message.dart  model_config.dart  note.dart  ocr_text_block.dart  plugin.dart  plugin_config_schema.dart  plugin_market_entry.dart  recycle_bin_item.dart  roleplay.dart  schedule_item.dart  shared_sync_models.dart  sync_change.dart  system_prompt.dart  task.dart  task_list.dart  todo_list.dart
lib/pages/: about_page.dart  admin_review_page.dart  api_models_page.dart  background_page.dart  changelog_page.dart  chat_page.dart  community_favorites_page.dart  community_page.dart  community_post_detail_page.dart  community_post_editor_page.dart  community_profile_page.dart  data_management_page.dart  feature_page.dart  floating_assistant_settings_page.dart  history_page.dart  home_page.dart  lan_sync_page.dart  latex_formula_editor_page.dart  mathlive_formula_editor_page.dart  my_submissions_page.dart  plugin_capability_management_page.dart  plugin_management_page.dart  plugin_market_detail_page.dart  plugin_market_page.dart  plugin_submission_page.dart  recycle_bin_page.dart  role_management_page.dart  settings_page.dart  theme_page.dart  translation_history_page.dart
lib/providers/: account_provider.dart  calendar_provider.dart  conversation_provider.dart  feature_provider.dart  lan_sync_provider.dart  model_config_provider.dart  plugin_provider.dart  recycle_bin_provider.dart  roleplay_provider.dart  settings_provider.dart  sync_provider.dart  task_provider.dart
lib/repositories/: app_storage_state.dart  calendar_repository.dart  conversation_repository.dart  feature_repository.dart  lan_peer_repository.dart  model_config_repository.dart  plugin_repository.dart  recycle_bin_repository.dart  roleplay_repository.dart  settings_repository.dart  task_repository.dart
lib/services/: account_service.dart  agent_lua_script_service.dart  agent_runtime_service.dart  api_service.dart  attachment_storage_service.dart  backend_client.dart  backend_uri.dart  backup_encryption.dart  backup_service.dart  bounded_zip_decoder.dart  calendar_occurrence_service.dart  calendar_platform_bridge.dart  calendar_platform_projection_coordinator.dart  calendar_platform_projection_service.dart  code_syntax_service.dart  community_service.dart  device_control_service.dart  device_identity_service.dart  device_plan_overlay_service.dart  device_registration_service.dart  device_run_controller.dart  floating_assistant_bridge.dart  floating_assistant_service.dart  floating_chat_session_controller.dart  floating_translation_controller.dart  image_generation_service.dart  lan_mdns_service.dart  lan_p256_certificate.dart  lan_pairing_payload_codec.dart  lan_peer_proof_service.dart  lan_secret_transfer_service.dart  lan_secure_transport.dart  lan_sync_coordinator.dart  lan_sync_storage.dart  lan_tls_certificate_service.dart  legacy_calendar_conversion_service.dart  legacy_resource_migration_service.dart  local_market_service.dart  lua_sandbox_utils.dart  lynai_call_identity.dart  (+28 more)
lib/utils/: calendar_timeline_layout.dart  changelog_parser.dart  chat_search_matcher.dart  file_name_utils.dart  file_picker_io_utils.dart  file_share_utils.dart  flush_tasks.dart  managed_model_id_migration.dart  open_source_licenses.dart  plugin_path_utils.dart  reminder_editor.dart  share_image_utils.dart  snackbar_utils.dart  webview_dispose_utils.dart
lib/widgets/: account_header_card.dart  changelog_dialog.dart  (+10 more)
linux/: CMakeLists.txt
macos/: Podfile
native/: CMakeLists.txt
native/ocr/: CMakeLists.txt  ocr_jni.cpp  omp_compat.cpp  ppocrv5.cpp  ppocrv5.h
native/tree_sitter/: CMakeLists.txt  lynai_tree_sitter.c  lynai_tree_sitter.h
scripts/: fetch-ncnn-deps.sh  patch-speech-to-text.rb
test/: account_provider_test.dart  api_stream_test.dart  attachment_storage_service_test.dart  backend_client_test.dart  calendar_provider_test.dart  calendar_repository_test.dart  changelog_parser_test.dart  chat_search_matcher_test.dart  chat_settings_snapshot_test.dart  community_markdown_test.dart  community_page_test.dart  conversation_provider_search_test.dart  data_management_page_test.dart  device_control_service_test.dart  device_control_test.dart  device_identity_service_test.dart  device_registration_service_test.dart  floating_assistant_service_test.dart  floating_translation_test.dart  flush_tasks_test.dart  home_page_nav_test.dart  lan_cloud_dedup_test.dart  lan_mdns_bounds_test.dart  lan_pairing_payload_test.dart  lan_peer_proof_test.dart  lan_peer_repository_test.dart  lan_plugin_sync_test.dart  lan_secret_transfer_test.dart  lan_tls_certificate_test.dart  lan_transport_test.dart  latex_formula_editor_page_test.dart  latex_renderer_test.dart  legacy_resource_migration_service_test.dart  lua_dardo_async_test.dart  lua_dardo_coroutine_test.dart  managed_model_id_migration_test.dart  market_plugin_package_test.dart  merge_planner_test.dart  model_config_provider_test.dart  model_serialization_test.dart  (+31 more)
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+105 files in other folders)
